# FastAPI_with_Llamacpp

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
lib/clients/: model_client.py  text_api_client.py
lib/constants/: models.py
lib/handlers/: api.py  schemas.py
lib/load_generator/: Dockerfile
lib/models/generator/: loader.py  text_generator_model.py
lib/utils/: config.py  random_text.py
lib/workers/: load_generator.py
